# treenav

./: .#README.md  LICENSE  README.md  README.md~  pyproject.toml  pyproject.toml~  pyprojects.toml~
.github/workflows/: pypi-publish.yml  pypi-publish_backup.yml
examples/: maze.py  maze_pygame.py
examples/maps/: maze_10_10.txt  maze_5_5.txt
src/pampa_search/: *Messages*  __init__.py  module.py  problems.py
src/treenav/: __init__.py~  module.py  module.py~  problems.py  problems.py~
src/treenav.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_maze.py  test_maze.py~
tests/maps/: maze_20_20.txt  maze_20_20.txt~  maze_50_50.txt
