[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "treenav"
version = "0.1.3"
authors = [
  { name="Tiago Oliveira Weber", email="tiago.oliveira.weber@gmail.com" },
]
description = "TREENAV: A minimalist tree navigation library made to be usable to solve path-finding optimization problems."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = [
    "LICENSE",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tiagoweber/trenav"
