[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pampa_search"
version = "0.1.6"
authors = [
  { name="Tiago Oliveira Weber", email="tiago.oliveira.weber@gmail.com" },
]
description = "PAMPA_SEARCH: A minimalist and generic graph search library made to be usable to solve state-search-space problems such as routing."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = [
    "LICENSE",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tiagoweber/pampa_search"
